# x1_wallet_firmware

./: CMakeLists.txt  tree.txt  version.txt
.github/workflows/: containerized-build.yml
apps/btc_family/: btc_context.h  btc_helpers.c  btc_helpers.h  btc_script.c  btc_txn.c  btc_txn_helpers.c  btc_txn_helpers.h
apps/btc_family/btc/: btc_app.c
apps/canton_app/: canton_api.c  canton_api.h  canton_context.h  canton_helpers.c  canton_helpers.h  canton_instruments.c  canton_instruments.h  canton_main.c  canton_main.h  canton_priv.h  canton_pub_key.c  canton_topology_txn.c  canton_txn.c  canton_txn_encoding.c  canton_txn_encoding.h  canton_txn_helpers.c  canton_txn_helpers.h
apps/evm_family/base/: base_app.c  base_app.h
apps/evm_family/hyperliquid/: hyperliquid_app.c  hyperliquid_app.h
apps/sia_app/: sia_api.c  sia_api.h  sia_context.h  sia_helpers.c  sia_helpers.h  sia_main.c  sia_main.h  sia_priv.h  sia_pub_key.c  sia_txn.c  sia_txn_helpers.c  sia_txn_helpers.h
common/coin_support/: coin_utils.c  hyperliquid.h
common/coin_support/canton_parse_txn/canton/: canton_crypto.proto  canton_prepared_transaction.proto  canton_topology_txn.proto  canton_txn_nodes.proto  canton_value.proto
common/core/: app_registry.h  core_flow_init.c
common/libraries/crypto/: bip39.c  bip39.h
common/libraries/crypto/mpz_operations/: mpz_ecdsa.c  mpz_ecdsa.h  mpz_pedersen.c
common/libraries/util/: utils.c  utils.h
common/proto-options/: version.options
common/proto-options/canton/: canton_crypto.options  canton_prepared_transaction.options  canton_topology_txn.options  canton_txn_nodes.options  canton_value.options  get_public_key.options  sign_topology_txn.options  sign_txn.options
common/proto-options/sia/: core.options  error.options  get_public_key.options  sign_txn.options
docs/: bootloader.md  cylock__proof_of_work.md  device_provision_auth.md  nfc_secure_communication.md  usb_communication.md
src/: constant_texts.c  constant_texts.h  controller_main.c
src/menu/: settings_menu.c
src/wallet/: reconstruct_wallet_flow.c  reconstruct_wallet_flow.h
utilities/cmake/common/: apps.cmake
utilities/cmake/firmware/: firmware.cmake  firmware.cmake.bu  firmware_bu.cmake
utilities/cmake/simulator/: simulator.cmake
utilities/proto/: generate-protob.sh
